--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr" >
 <head>
+  <meta name="google-site-verification" content="tT5v8s1KJOe6jFUS1GGWqTITIxqmkuNGDEgFAs69UhY" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Eywp | Full Stack Developer</title>
